manifests/samples/k8s/v1alpha1/deployment_dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployment-sample-dashboard
spec:
  rules:
    - host: deployment-sample-dashboard
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deployment-sample-dashboard
                port:
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: deployment-sample-dashboard
spec:
  selector:
    app.kubernetes.io/name: deployment-sample-dashboard
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
---
apiVersion: k8s.tensegrity.fastforge.io/v1alpha1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: deployment-sample-dashboard
  name: deployment-sample-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deployment-sample-dashboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deployment-sample-dashboard
    spec:
      containers:
        - name: dashboard
          image: registry.k8s.io/e2e-test-images/agnhost:2.39
          command:
            - /agnhost
            - netexec
            - --http-port
            - "3000"
          readinessProbe:
            httpGet:
              port: 3000
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              port: 3000
            initialDelaySeconds: 10
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
  delegates:
    - kind: Namespace
      name: testing
    - kind: Namespace
      name: staging
    - kind: Namespace
      name: production
  consumes:
    - apiVersion: k8s.tensegrity.fastforge.io/v1alpha1
      kind: Deployment
      name: deployment-sample-api
      maps:
        API_HOST: http-host
        API_PORT: http-port
  produces:
    - key: http-host
      apiVersion: networking.k8s.io/v1
      kind: Ingress
      fieldPath: '{ .spec.rules[0].host }.{ .metadata.namespace }'
    - key: http-port
      apiVersion: v1
      kind: Service
      fieldPath: '{ .spec.ports[?(@.name=="http")].port }'
